# ctcdecode-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  Licence  README.md
cmake/: FindOpenFST.cmake  Findkenlm.cmake
include/: ctcdecode.h
src/: ctc_beam_search_decoder.cpp  scorer.cpp  scorer.h
tests/: test_decode.cpp
utils/: util.cpp  util.h
